--- a/docs/style.css
+++ b/docs/style.css
@@ -25,8 +25,18 @@ iframe {
   top: 0;
   left: 0;
   width: 100%;
+  height: 25px;
   position: fixed;
   color: #ffffff;
+  -webkit-box-shadow: 0 0 0 1px #c9c9c9;
+          box-shadow: 0 0 0 1px #c9c9c9;
+}
+
+#website nav img {
+  width: 20px;
+  margin: 2px;
+  height: auto;
+  float: right;
   -webkit-box-shadow: 0 0 0 1px #c9c9c9;
           box-shadow: 0 0 0 1px #c9c9c9;
 }
