--- a/docs/website/_website.scss
+++ b/docs/website/_website.scss
@@ -1,11 +1,19 @@
 #website {
-    nav{
+    nav {
         top: 0;
         left: 0;
         width: 100%;
+        height: 25px;
         position: fixed;
         color: $white;
         box-shadow: $outline;
+        img {
+            width: 20px;
+            margin: 2px;
+            height: auto;
+            float: right;
+            box-shadow: $outline;
+        }
     }
     * {
         &:focus {
